# socialmedia-cli

./: .gitignore  01_workitems.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  verify.sh
socialmedia_cli/: __init__.py  api.py  auth.py  cli.py
socialmedia_cli/collectors/: web_search.py
socialmedia_cli/components/: __init__.py  twitter.py
socialmedia_cli/core/: config.py  errors.py  logging.py  storage.py
socialmedia_cli/drafts/: manager.py
socialmedia_cli/llm/: __init__.py  base.py
socialmedia_cli/llm/providers/: cerebras.py  groq.py  ollama.py  openai.py
socialmedia_cli/pipelines/: daily_digest.py
socialmedia_cli/tests/: test_openai.py
socialmedia_cli/writers/: tweet_writer.py
tests/: test_api.py  test_auth.py  test_cli.py  test_twitter.py
tests/integration/: test_digest.py
tests/unit/: test_registry.py
