[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "socialmedia-cli"
version = "0.2.0"
description = "A CLI tool for social media management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "socialmedia_cli"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
typer = "^0.9.0"
pydantic = "^2.5.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
socialmedia-cli = "socialmedia_cli.cli:app"

[tool.ruff]
line-length = 88
target-version = "py38" 